@@ -25,9 +25,27 @@
 #include "MessengerTypeSupportImpl.h"
 #include "Writer.h"
 
+namespace {
+
+void parse_args(int argc, ACE_TCHAR* argv[], bool& reliable)
+{
+  ACE_Get_Opt getopt(argc, argv, "r:");
+  for (int opt = 0; (opt = getopt()) != EOF;) {
+    if (opt == 'r') {
+      reliable = ACE_OS::atoi(getopt.opt_arg());
+    }
+  }
+}
+
+}
+
 int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 {
   int status = 0;
+  
+  bool reliable = true;
+  parse_args(argc, argv, reliable);
+
   try {
     // Initialize DomainParticipantFactory
     DDS::DomainParticipantFactory_var dpf =
@@ -123,7 +141,7 @@ int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 
     {
       Writer writer(dw, dw2);
-      writer.write();
+      writer.write(reliable);
     }
 
     ACE_DEBUG((LM_DEBUG, "Publisher delete contained entities\n"));
